--- a/style/custom.css
+++ b/style/custom.css
@@ -21,11 +21,15 @@
 }
 
 #typing_frame{ 
-    width: 40%;
+    width: 500px;
     background-color: black;
     height: 100px;
 	margin-top: 100px;
 	margin-left: auto;
     margin-right: auto;
 	padding: 5px; color: white; 
+}
+
+#about_text,#links,#resume{
+	font-family: "Courier New", Courier, monospace;
 }
